Fixed truncation of breadcrubms in interest layers

--- a/app/assets/stylesheets/core/core_components/cards/_card_layer.sass
+++ b/app/assets/stylesheets/core/core_components/cards/_card_layer.sass
@@ -13,6 +13,9 @@
   .row--secondary
     padding-top: 20px
 
+  .row__title--secondary
+    max-width: 100%
+
 .card--layer__content
   @extend %clearfix
   @extend %rounded-corners
